# AGH_Rust_Intro

./: .gitignore  README.md  compose.yaml
src/cli-weather/: Cargo.toml  weather_dump.json
src/cli-weather/src/: api.rs  cli.rs  db.rs  display.rs  filter.rs  image.rs  main.rs  models.rs  weather.rs
src/lab1/lab/src/: main.rs
src/lab1/sudoku/src/: main.rs
src/lab1/tic-tac-toe/src/: main.rs
src/lab2/isbn-check/: Cargo.toml
src/lab2/isbn-check/src/: main.rs
src/lab2/lab/src/: main.rs
src/lab2/password-gen/: Cargo.toml
src/lab2/password-gen/src/: main.rs
src/lab3/lab/examples/: rectangle.rs
src/lab3/lab/src/: main.rs
src/lab3/rust-quizzes/: Cargo.toml
src/lab3/rust-quizzes/src/: main.rs
src/lab3/rust-quizzes/src/models/: mod.rs
src/lab3/rust-quizzes/src/models/user/: participant.rs
src/lab3/rust-quizzes/src/services/: auth.rs
src/lab3/rust-vec2d/src/: main.rs
src/lab3/rust-vec2d/src/models/: mod.rs  vec2d.rs
src/lab4/chess/src/: main.rs
src/lab4/lab/src/: main.rs
src/lab4/lab2/src/: main.rs
src/lab4/lab3/src/: main.rs
src/lab4/lab4/src/: main.rs
src/lab4/lab5/src/: main.rs
src/lab5/errors/src/: main.rs
src/lab6/F1/: Cargo.toml
src/lab6/F1/src/: main.rs
