[package]
name = "cli-pogodynka"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mongodb = { version = "2.7.0", features = ["tokio-runtime"] }
clap = { version = "4.5", features = ["derive"] }
inquire = "0.6"
futures = "0.3"
anyhow = "1.0"
serde_json = "1.0"
colored = "2.0"
dotenv = "0.15.0"
crossterm = "0.27"