[package]
name = "cli-weather-app"
version = "0.1.5"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
anyhow = "1.0"
mongodb = { version = "2.7.0", features = ["tokio-runtime"] }
serde_json = "1.0"
futures = "0.3"
inquire = "0.6"
colored = "2.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
chrono-tz = "0.8"